# rp2040-rust-robot

./: .gitignore  .gitmodules  .rusty-hook.toml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci_checks.yml
config/: README.md  config.ini
hardware/: .gitignore
hardware/rp-pico-sensor-shield/: CONN2_1760510000_WED.kicad_sym  fp-lib-table  rp-pico-sensor-shield.kicad_pcb  rp-pico-sensor-shield.kicad_pro  rp-pico-sensor-shield.kicad_sch  sym-lib-table
hardware/rp-pico-sensor-shield/CONN2_1760510000_WED.pretty/: CONN2_1760510000_WED.kicad_mod
src/: driver.rs  main.rs  robot.rs
src/l298n/: mod.rs  motor_controller.rs
src/model/: heading.rs  heading_core1.rs  mod.rs  pid_controller.rs  point.rs
src/robot/: config.rs  debouncer.rs  file_storage.rs  motor_controller.rs
src/robot/file_storage/: logger.rs  sd_card_spi_device.rs  sd_file.rs
src/robot/telemetry/: mod.rs  straight_movement.rs
src/system/: data.rs  millis.rs  mod.rs
